tests/success/Bool.vix
type Bool where
  True : Bool
  False : Bool

test (b : Bool) = case b of
  False -> 2
  True -> 3

x = printInt (addInt (test True) (test False))
