tests/type-error/TypeMismatch.vix
type bool where
  False : bool
  True : bool

the : (a : type) -> a -> a
the _ x = x

test = addInt (the bool True) 1
